src/chart.css
/**
 * Chart container
 */
.sqc {
    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
    border-radius: 3px;
    background: #fefefe;
    color: #000;
    margin: .5rem;
}
/**
 * Chart header
 */
.sqc .sqc__h {
    display: flex;
    padding: 1rem 0;
    border-bottom: 1px solid rgba(0,0,0,.2);
}
.sqc .sqc__h .sqc__h--question {
    box-sizing: border-box;
    flex: 1 0 70%;
    padding: 0 1rem;
}
.sqc .sqc__h .sqc__h--range {
    box-sizing: border-box;
    flex: 1 0 30%;
    padding: 0 1rem;
    text-align: center;
}
/**
 * Chart answer
 */
.sqc .sqc__a {
    display: flex;
    align-items: center;
    box-sizing: border-box;
    border-bottom: 1px solid rgba(0, 0, 0, .1);
}
.sqc .sqc__a .sqc__a--title {
    box-sizing: border-box;
    flex: 1 0 20%;
    padding: 1rem;
}
.sqc .sqc__a .sqc__a--bars {
    box-sizing: border-box;
    flex: 1 0 50%;
    padding: .25rem;
}
.sqc .sqc__a .sqc__a--bars .sqc__a__bars div {
    position: relative;
    display: flex;
}
.sqc .sqc__a .sqc__a--bars .sqc__a__bars div label {
    position: absolute;
    bottom: 0;
    margin: 0;
    margin-left: .5rem;
    font-weight: 300;
    font-size: .8rem
}
.sqc .sqc__a .sqc__a__bars {
    margin: .25rem;
}
.sqc .sqc__a .sqc__a__bars .sqc__progress-block:first-child > .sqc__progress-container {
    height: 1rem;
}
.sqc__progress-container {
    position: relative;
    display: inline-block;
    overflow: hidden;
    width: 100%;
    height: 1.2rem;
    background: transparent;
    border-radius: 3px;
}
.sqc__progress-value {
    display: block;
    height: 100%;
    background-color: rgba(0,0,0,.1);
    border-radius: 3px;
}
.sqc .sqc__a .sqc__a--range {
    box-sizing: border-box;
    flex: 1 0 30%;
    padding: .25rem;
    text-align: center;
}
.sqc__a__range--container {
    height: 2.2rem;
    margin: .25rem;
    display: flex;
    flex-direction: column;
    justify-content: center;
}
.sqc__a__range {
    display: flex;
    height: 1rem;
    box-shadow: none;
    margin: 0;
    position: relative;
    background: transparent;
}
.sqc__a__range--min {
    position: relative;
}
.sqc__a__range--min::after {
    content: attr(display);
    position: absolute;
    top: 1rem;
    right: -1rem;
    font-size: .8rem;
}
.sqc__a__range--line {
    flex: 1 0 auto;
    border-left: 2px solid rgba(0,0,0,.2);
    border-right: 2px solid rgba(0,0,0,.2);
    position: relative;
}
.sqc__a__range--line::after {
    content: '';
    height: 2px;
    position: absolute;
    width: 100%;
    background-color: rgba(0,0,0,.2);
    left: 0;
    top: 50%;
}
.sqc__a__range--max {
    position: relative;
}
.sqc__a__range--max::after {
    content: attr(display);
    position: absolute;
    top: 1rem;
    left: -.7rem;
    font-size: .8rem;
}
.sqc__a__range--val {
    position: absolute;
    top: 0;
    width: 1rem;
    height: 1rem;
    border: 2px solid rgba(0,0,0,.2);
    border-radius: 50%;
    background-color: white;
}
.sqc__a__range--val::after {
    content: attr(display);
    position: absolute;
    top: -1rem;
    font-size: .8rem;
}
/**
 * Chart footer.
 */
.sqc .sqc__f {
    display: flex;
    justify-content: center;
    padding: 1rem 0;
}
.sqc .sqc__f .sqc__f__s {
    display: flex;
    align-items: center;
    margin: 0 1rem;
}
.sqc .sqc__f .sqc__f__s i {
    display: block;
    width: 1rem;
    height: 1rem;
    border-radius: 50%;
    margin-right: .5rem;
}
.sqc .sqc__f .sqc__f__s span {
    font-size: .8rem;
}

